# pbg-tellurium

./: .gitignore  README.md  pyproject.toml
demo/: composite_report.py  decay-demo-report.html  decay-with-viz-report.html  demo_report.py  report.html
pbg_tellurium/: __init__.py  composites.py  processes.py  types.py  visualizations.py
pbg_tellurium/composites/: __init__.py  decay-demo.composite.yaml  decay-with-viz.composite.yaml  steady-state.composite.yaml
tests/: test_composites.py  test_processes.py
