[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-tellurium"
version = "0.1.0"
description = "Process-bigraph wrapper for Tellurium / libroadrunner SBML simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "process-bigraph>=0.0.10",
    "bigraph-schema",
    "tellurium>=2.2",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "bigraph-viz", "matplotlib"]

[tool.setuptools.packages.find]
include = ["pbg_tellurium*"]
